Fixing resize again. Fixes #183.

--- a/src/components/Output/style.scss
+++ b/src/components/Output/style.scss
@@ -137,3 +137,7 @@ Note: These styles are temporary. They will be replaced before going live.
     border-bottom-right-radius: 0;
   }
 }
+
+.output-canvas {
+  flex-shrink: 0;
+}
