--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -13,6 +13,8 @@ html, body {
   overflow: hidden;
   overscroll-behavior: none;
   contain: strict;
+  background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 2"><path d="M1 2V0h1v1H0v1z" fill-opacity=".05"/></svg>');
+  background-size: 20px 20px;
 }
 
 :root {
