Class for file drop

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -12,45 +12,43 @@ Note: These styles are temporary. They will be replaced before going live.
   contain: strict;
 }
 
-:global {
-  file-drop {
-    overflow: hidden;
-    touch-action: none;
-    height:100%;
-    width:100%;
+.drop {
+  overflow: hidden;
+  touch-action: none;
+  height:100%;
+  width:100%;
 
-    &:after {
-      content: '';
-      position: absolute;
-      display: block;
-      left: 10px;
-      top: 10px;
-      right: 10px;
-      bottom: 10px;
-      border: 2px dashed #fff;
-      border-radius: 10px;
-      opacity: 0;
-      transform: scale(0.95);
-      transition: opacity 300ms ease, transform 300ms cubic-bezier(.6,2,.6,1), background-color 300ms step-end, border-color 300ms step-end;
-      pointer-events: none;
-    }
+  &:after {
+    content: '';
+    position: absolute;
+    display: block;
+    left: 10px;
+    top: 10px;
+    right: 10px;
+    bottom: 10px;
+    border: 2px dashed #fff;
+    border-radius: 10px;
+    opacity: 0;
+    transform: scale(0.95);
+    transition: opacity 300ms ease, transform 300ms cubic-bezier(.6,2,.6,1), background-color 300ms step-end, border-color 300ms step-end;
+    pointer-events: none;
+  }
 
-    &.drop-valid:after,
-    &.drop-invalid:after {
-      opacity: 1;
-      transform: scale(1);
-      transition: opacity 300ms ease, transform 300ms cubic-bezier(.6,2,.6,1);
-    }
+  &.drop-valid:after,
+  &.drop-invalid:after {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 300ms ease, transform 300ms cubic-bezier(.6,2,.6,1);
+  }
 
-    &.drop-valid:after {
-      background-color:rgba(88, 116, 88, 0.2);
-      border-color: rgba(65, 129, 65, 0.5);
-    }
+  &.drop-valid:after {
+    background-color:rgba(88, 116, 88, 0.2);
+    border-color: rgba(65, 129, 65, 0.5);
+  }
 
-    &.drop-invalid:after {
-      background-color:rgba(119, 85, 85, 0.2);
-      border-color:rgba(129, 63, 63, 0.5);
-    }
+  &.drop-invalid:after {
+    background-color:rgba(119, 85, 85, 0.2);
+    border-color:rgba(129, 63, 63, 0.5);
   }
 }
 
