--- a/src/components/Output/custom-els/TwoUp/styles.css
+++ b/src/components/Output/custom-els/TwoUp/styles.css
@@ -55,11 +55,12 @@ two-up[legacy-clip-compat] > :not(.two-up-handle) {
   border-radius: calc(var(--thumb-size) * 0.08);
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
   color: var(--thumb-color);
+  box-sizing: border-box;
+  padding: 0 48%;
 }
 
 .scrubber svg {
   flex: 1;
-  margin: 0 25%;
 }
 
 two-up[orientation='vertical'] .two-up-handle {
