--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -18,6 +18,7 @@ $horizontalPadding: 15px;
 
 .option-text-first {
   display: grid;
+  align-items: center;
   grid-template-columns: 87px 1fr;
   grid-gap: 0.7em;
   padding: 10px $horizontalPadding;
@@ -41,4 +42,12 @@ $horizontalPadding: 15px;
   background: rgba(0, 0, 0, 0.7);
 }
 
-
+.text-field {
+  background: #fff;
+  font: inherit;
+  border: none;
+  padding: 2px 0 2px 10px;
+  width: 100%;
+  box-sizing: border-box;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+}
