Range input styles

--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -24,6 +24,10 @@ $horizontalPadding: 15px;
   padding: 10px $horizontalPadding;
 }
 
+.option-one-cell {
+  padding: 10px $horizontalPadding;
+}
+
 .option-input-first,
 .section-enabler {
   cursor: pointer;
