--- a/src/components/range/style.scss
+++ b/src/components/range/style.scss
@@ -8,6 +8,7 @@
 }
 
 .range-wc-container {
+  grid-row: 2 / 3;
   grid-column: 1 / 3;
 }
 
@@ -16,6 +17,9 @@
 }
 
 .text-input {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+
   text-align: right;
   background: transparent;
   color: inherit;
@@ -36,6 +40,8 @@
 
 
   // Remove the number controls
+  -moz-appearance: textfield;
+
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
     -moz-appearance: none;
