Large compress select

--- a/src/components/select/style.scss
+++ b/src/components/select/style.scss
@@ -22,3 +22,12 @@
   fill: #fff;
   width: 10px;
 }
+
+.large {
+  padding: 10px 35px 10px 10px;
+  background: #151515;
+
+  & .arrow {
+    right: 13px;
+  }
+}
