MozJPEG options updated

--- a/src/components/range/style.scss
+++ b/src/components/range/style.scss
@@ -29,6 +29,7 @@
   box-sizing: border-box;
   text-decoration: underline;
   text-decoration-style: dotted;
+  text-underline-position: under;
   width: 48px;
   position: relative;
   left: 5px;
