--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -129,3 +129,9 @@ $horizontalPadding: 15px;
   text-align: left;
   padding: 5px 10px;
 }
+
+.spinner {
+  --color: #fff;
+  --delay: 0;
+  --size: 22px;
+}
