--- a/src/components/Options/style.scss
+++ b/src/components/Options/style.scss
@@ -2,12 +2,19 @@ $horizontalPadding: 15px;
 
 .options {
   color: #fff;
-  width: 300px;
   opacity: 0.9;
   font-size: 1.2rem;
   max-height: 100%;
   display: flex;
   flex-flow: column;
+  max-width: 400px;
+  margin: 0 auto;
+  width: 100%;
+
+  @media (min-width: 600px) {
+    width: 300px;
+    margin: 0;
+  }
 }
 
 .options-title {
