--- a/src/components/results/style.scss
+++ b/src/components/results/style.scss
@@ -25,6 +25,12 @@
   display: flex;
   align-items: center;
   padding: 0 15px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.result-title {
+  margin-right: 0.4em;
 }
 
 .size-delta {
