Adding height animation to multi-panel

--- a/src/components/compress/custom-els/MultiPanel/styles.css
+++ b/src/components/compress/custom-els/MultiPanel/styles.css
@@ -1,11 +1,10 @@
 .panel-heading {
-  background:gray;
+  background: gray;
 }
 .panel-content {
-  height:0px;
-  overflow:scroll;
-  transition: height 1s;
+  height: 0px;
+  overflow: auto;
 }
 .panel-content[expanded] {
-  height:auto;
+  height: auto;
 }
