--- a/src/components/results/style.scss
+++ b/src/components/results/style.scss
@@ -16,9 +16,17 @@
 
 .results {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr auto auto;
   background: rgba(0, 0, 0, 0.9);
-  font-size: 1.4rem;
+  font-size: 1rem;
+
+  @media (min-width: 400px) {
+    font-size: 1.2rem;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 1.4rem;
+  }
 
   &:focus {
     outline: none;
@@ -40,7 +48,7 @@
 }
 
 .size-delta {
-  font-size: 1.1rem;
+  font-size: 0.8em;
   font-style: italic;
   position: relative;
   top: -1px;
@@ -77,7 +85,8 @@
   animation: action-leave 0.2s;
 }
 
-.download-icon {
+.download-icon,
+.copy-icon {
   color: #fff;
   display: block;
   --size: 24px;
@@ -92,4 +101,11 @@
   --delay: 0;
   --size: 22px;
   grid-area: 1/1;
+}
+
+.copy-to-other {
+  composes: unbutton from '../../lib/util.scss';
+  composes: download;
+
+  background: #656565;
 }
