Allow two-up and pinch-zoom to work beneath controls

--- a/src/components/Output/style.scss
+++ b/src/components/Output/style.scss
@@ -43,6 +43,12 @@
   flex-wrap: wrap;
   contain: content;
 
+  // Allow clicks to fall through to the pinch zoom area
+  pointer-events: none;
+  & > * {
+    pointer-events: auto;
+  }
+
   @media (min-width: 860px) {
     top: auto;
     left: 320px;
